--- a/src/components/User/Pins/Views/Mobile/Styles/main.scss
+++ b/src/components/User/Pins/Views/Mobile/Styles/main.scss
@@ -1,4 +1,4 @@
-.headerComponent {
+.pinsComponent {
     @import 'theme/MediaQueries';
     @import 'theme/PxFunction';
     @import 'theme/Palette';
