--- a/src/theme/Palette.scss
+++ b/src/theme/Palette.scss
@@ -47,3 +47,6 @@ $tempColor26: #aeb3b4;
 //ForwardTeam palette//
 $color1: #ff5959;
 $color2: #3a364d;
+$color3: #f7faff;
+$color4: #a2aabf;
+$color5: #fd5a5d;
