--- a/src/theme/Palette.scss
+++ b/src/theme/Palette.scss
@@ -50,3 +50,9 @@ $color2: #3a364d;
 $color3: #f7faff;
 $color4: #a2aabf;
 $color5: #fd5a5d;
+$color6: #7c778c;
+$color7: #e7eaf1;
+$color8: #38344b;
+$color9: #e6e9f1;
+$color10: #f9c054;
+$color11: #f5f8fd;
