--- a/src/theme/Base.scss
+++ b/src/theme/Base.scss
@@ -9,7 +9,7 @@ $baseMinWidth: 320px;
 
 // Palette
 $baseColor: #7d7d7d;
-$baseBackgroundColor: #f3f4f4;
+$baseBackgroundColor: #e7eaf1;
 $transparentColor: rgba(0, 0, 0, 0);
 
 html {
