--- a/src/theme/PxFunction.scss
+++ b/src/theme/PxFunction.scss
@@ -1,22 +1,23 @@
 @function pxMedia($px, $media) {
-    $k: 0;
-    @if $media == phonePortrait {
-        $k: .1562500;
-    } @else if $media == phoneLandscape {
-        $k: .08803;
-    } @else if $media == tabletPortrait {
-        $k: .065106;
-    } @else if $media == tabletLandscape {
-        $k: .04882826;
-    } @else if $media == desktop {
-        $k: .03660322;
-    } @else if $media == desktopWide {
-        $k: .03125;
-    } @else if $media == desktopHD {
-        $k: .028935;
-    } @else if $media == desktopMega {
-        $k: .022978;
-    }
-
+    $k: .065106;
     @return $px * $k * 1vw;
+    //@if $media == phonePortrait {
+    //    $k: .1562500;
+    //} @else if $media == phoneLandscape {
+    //    $k: .08803;
+    //} @else if $media == tabletPortrait {
+    //    $k: .065106;
+    //} @else if $media == tabletLandscape {
+    //    $k: .04882826;
+    //} @else if $media == desktop {
+    //    $k: .03660322;
+    //} @else if $media == desktopWide {
+    //    $k: .03125;
+    //} @else if $media == desktopHD {
+    //    $k: .028935;
+    //} @else if $media == desktopMega {
+    //    $k: .022978;
+    //}
+    //
+    //@return $px * $k * 1vw;
 }
