--- a/src/components/User/Sprint/Views/Mobile/Styles/common.scss
+++ b/src/components/User/Sprint/Views/Mobile/Styles/common.scss
@@ -92,6 +92,7 @@ body {
             display: flex;
             align-items: center;
             justify-content: center;
+            flex-shrink: 0;
             width: px(32);
             height: px(32);
             margin-right: px(22);
@@ -119,6 +120,7 @@ body {
             display: flex;
             align-items: center;
             justify-content: center;
+            flex-shrink: 0;
             width: px(32);
             height: px(32);
             margin-right: px(22);
