--- a/src/components/User/Question/Views/Mobile/Styles/common.scss
+++ b/src/components/User/Question/Views/Mobile/Styles/common.scss
@@ -22,6 +22,7 @@
       color: $color2;
       font-size: px(42);
       font-weight: bold;
+      line-height: px(60);
     }
 
     .answer {
@@ -40,6 +41,10 @@
       .text {
         font-size: px(30);
         line-height: px(46);
+
+        a {
+          color: $color1;
+        }
       }
     }
   }
