--- a/src/components/User/Pins/Views/Mobile/Styles/common.scss
+++ b/src/components/User/Pins/Views/Mobile/Styles/common.scss
@@ -16,6 +16,7 @@
     flex-wrap: wrap;
 
     .pinItem {
+        cursor: pointer;
         display: flex;
         flex-direction: column;
         align-items: center;
