feat: team page

--- a/src/components/Team/Info/Views/Mobile/Styles/common.scss
+++ b/src/components/Team/Info/Views/Mobile/Styles/common.scss
@@ -21,6 +21,7 @@
     }
 
     .image {
+      visibility: hidden;
       display: flex;
       align-items: flex-end;
       justify-content: center;
